# orrery-aether

./: .gitignore  Aether-規劃.md  README.md  README.zh-TW.md  pyproject.toml
aether/: .dockerignore  .env.example  Dockerfile  README.md  cli.py  cli_support.py  constellation.yaml  consult.py  demo_phase2.py  demo_phase4.py  demo_register.py  demo_scenario1.py  docker-compose.yml  mcp.example.json  mcp_server.py  pytest.ini  run_observatory.py  send_message.py
aether/core/: __init__.py  aether_client.py  conn.py  control.py  envelope.py  guards.py  heartbeat.py  registry.py  session_store.py
aether/docs/: DEVLOG.md  phase3-live-capture.txt
aether/docs/cli/: 00-plan.md
aether/docs/cross-machine/: 00-plan.md  01-discussion.md  02-spec.md  verify-override.yml
aether/docs/discussions/: 2026-05-31-aether-cli.md
aether/docs/operator-ui/: 00-plan.md  01-discussion.md  (+1 more)
aether/observatory/: control.py  crash.py  progress.py  register.py
aether/operator_panel/: __init__.py  control_service.py  server.py
aether/stargazer/: demo_feed.py  live_capture.py  readonly.py  server.py
aether/tests/: conftest.py  test_cli.py  test_cli_support.py  test_cross_machine.py  test_operator_ui.py  test_p2_scenario_6_injection_isolation.py  test_p2_scenario_7_full_e2e.py  test_p2_scenario_8_register.py  test_p3_scenario_2_live_update.py  test_p3_scenario_3_extinction.py  test_p3_scenario_4_constellation.py  test_p3_smoke.py  test_scenario_1_convergence.py  test_scenario_3_rate_limit.py  test_scenario_4_dedup.py  test_scenario_5_routing.py  test_scenario_6_reliable_delivery.py
(+6 files in other folders)
