[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aether-bus"
version = "0.1.0"
description = "Message infrastructure that lets Claude Code agents in different projects talk directly to each other over a Redis-Streams bus."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "OffskyLab" }]
keywords = ["claude", "agents", "redis-streams", "message-bus", "mcp"]
dependencies = [
  "redis>=5.0,<6.0",
  "PyYAML>=6.0",
  "fastapi>=0.115.6,<0.116",
  "starlette>=0.40,<0.42",
  "sse-starlette>=2.1,<3",
  "uvicorn>=0.30",
  "httpx>=0.27",
  "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
# `pipx install git+https://github.com/OffskyLab/orrery-aether` → bare `aether` cmd.
aether = "aether.cli:main"

[project.urls]
Homepage = "https://github.com/OffskyLab/orrery-aether"

[tool.setuptools.packages.find]
include = ["aether*"]

[tool.setuptools.package-data]
# Non-.py files the package reads at runtime from its own dir (must ship in the wheel).
aether = [
  "constellation.yaml",
  "docker-compose.yml",
  "Dockerfile",
  "mcp.example.json",
  ".env.example",
  "requirements.txt",
  "scripts/*",
]
"aether.stargazer" = ["web/*"]
"aether.operator_panel" = ["web/*"]
